--- a/LoudPLayNewsTask/app/build.gradle
+++ b/LoudPLayNewsTask/app/build.gradle
@@ -32,8 +32,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    // recyclerView
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation 'com.squareup.retrofit2:retrofit:(insert latest version)'
+    //cardView
+    implementation "androidx.cardview:cardview:1.0.0"
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
