--- a/LoudPLayNewsTask/app/src/main/AndroidManifest.xml
+++ b/LoudPLayNewsTask/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.loudplaynewstask">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,13 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoudPLayNewsTask">
         <activity
-            android:name=".TopicNewsActivity"
+            android:name=".ui.topic.TopicNewsActivity"
             android:exported="true" />
         <activity
-            android:name=".HeadlinesActivity"
+            android:name=".ui.headlines.HeadlinesActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
